created all button types

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,8 @@
-@use './scss/primary-button';
-@use './scss/primary-icon-button';
+@use './styles/primary-button';
+@use './styles/primary-icon-button';
+@use './styles/secondary-button';
+@use './styles/secondary-icon-button';
+@use './styles/tertiary-button';
+@use './styles/tertiary-icon-button';
+@use './styles/quaternary-button';
+@use './styles/quaternary-icon-button';
