--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,19 @@
-<button primaryButton>Primary Button</button>
+<div class="buttons-container">
+    <button primaryButton disabled>Primary Button</button>
+    <button secondaryButton>Secondary Button</button>
+    <button tertiaryButton>Tertiary Button</button>
+    <button quaternaryButton>Quaternary Button</button>
+</div>
 
-<br>
-<br>
-<br>
 
-<button primaryIconButton>m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z</button>
+
+
+<div class="buttons-container">
+    <button primaryIconButton>m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z</button>
+    <button secondaryIconButton>M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160ZM480-80q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80Z</button>
+    <button tertiaryIconButton>m320-80 40-280H160l360-520h80l-40 320h240L400-80h-80Z</button>
+    <button quaternaryIconButton>m233-120 65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Z</button>
+</div>
+
+
+
